spacing fix between text input areas

--- a/web/themes/custom/myusf/sass/src/partials/_navigation.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_navigation.scss
@@ -1324,6 +1324,13 @@ button.navbar-toggler.navbar-toggler-right.collapsed{
 		.form-group {
 		    margin-bottom: .5rem;
 		}
+		input {
+    		margin-top: -5px;
+    		margin-bottom: -10px;
+		}
+		input#edit-field-end-date {
+    		margin-bottom: 0px;
+		}
 	}
 
 	#block-exposedformevents-searchpage-1 fieldset#edit-field-category--wrapper {
